    folder.
  o Removed CMake platform specification in Linux build script
    (Krzysztof Pyrkosz).
  o Build script for building FFmpeg for Linux now part of the repository.
    Contributions during development (not w.r.t 2.1.0 Beta 1):
    + Fix ffmpeg build dependencies on clean ubuntu desktop amd64 14.04.3 or
      higher (Walter Sonius).

Consumers
---------

  o FFmpeg consumer:
    + Fixed long overdue bug where HD material was always recorded using the
      BT.601 color matrix instead of the BT.709 color matrix. RGB codecs like
      qtrle was never affected but all the YCbCr based codecs were.
    + Fixed bug in parsing of paths containing -.
  o DeckLink consumer:
    + Fixed possible dead-lock in frame queue.

Producers
---------

  o FFmpeg producer:
    + Increased the max number of frames that audio/video can be badly
      interleaved with (Dimitry Ishenko).
    + Fixed bug where decoders sometimes requires more than one video packet to
      decode the first frame.
    + Added support for IN and OUT parameters (Dimitry Ishenko).
  o Framerate producer:
    + Fixed bug when INFO was used on a not yet playing framerate producer.
  o HTML producer:
    + Fixed bug where only URL:s with . in them where recognized.
  o Image producer:
    + Added LENGTH parameter to allow for queueing with LOADBG AUTO.
  o Layer producer:
    + Fixed serious bug where a circular reference of layer producers caused a
      stack overflow and server crash.
  o Scene producer:
    + Added abs() function to expression language.

Mixer
-----

  o Fixed bug in the contrast/saturation/brightness code where the wrong luma
    coefficients was used.
  o Rewrote the chroma key code to support variable hue, instead of fixed green
    or blue. Threshold setting was removed in favour of separate hue width,
    minimum saturation and minimum brightness constraints.
  o Fixed bug where glReadPixels() was done from the last drawn to texture